--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,11 @@ authors = ["kchu25 <skchu@wustl.edu> and contributors"]
 version = "0.1.0"
 
 [deps]
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
+DocumenterTools = "0.1.14"
 julia = "1"
 
 [extras]
