--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["kchu25 <skchu@wustl.edu> and contributors"]
 version = "0.1.0"
 
 [deps]
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
+Combinatorics = "1.0.2"
 DocumenterTools = "0.1.13"
 julia = "1.7.2"
 
